<resources>
    <string name="app_name">货车多</string>
    <string name="top_line">头条</string>
    <string name="send_goods">发货</string>
    <string name="che_yuan">车源</string>
    <string name="find_goods">找货</string>
    <string name="person">用户</string>
    <string name="store">商城</string>
    <string name="call">打电话</string>
    <string name="sendMessage">发短信</string>
    <string name="depart_place">出发地</string>
    <string name="destination">目的地</string>
    <string name="car_length_type">车长车型</string>
    <string name="goods_type">货物类型</string>
    <string name="goods_weight">货物重量</string>
    <string name="freight_money">运费金额</string>
    <string name="loading_time">装车时间</string>
    <string name="content">备注信息</string>
    <string name="tonne">吨</string>
    <string name="square">方</string>
    <string name="yuan">元</string>
    <string name="touch_choose">点击选择</string>
    <string name="touch_output">点击输入</string>
    <string name="enture_publish">确定发布</string>
    <string name="my_order">我的订单</string>
    <string name="my_money">我的钱包</string>
    <string name="my_driver">我的司机</string>
    <string name="ji_fen_store">积分商城</string>
    <string name="my_balance">我的积分</string>
    <string name="user_check">用户审核</string>
    <string name="info_query">统计查询</string>
    <string name="new_push">广告及新闻发布</string>
    <string name="car_length">车长</string>
    <string name="car_type">车型</string>
    <string name="choose_address">选择地址</string>
    <string name="use_car_type">用车类型</string>
    <string name="carload">整车</string>
    <string name="breakbulk">零担</string>
    <string name="else_type">其他类型</string>
    <string name="ok">确认</string>
    <string name="load_unload_mode">装卸方式</string>
    <string name="pay_mode">支付方式</string>
    <string name="remark">备注</string>
    <string name="limit_50size">限50字</string>
    <string name="please_input_title">请输入标题</string>
    <string name="send_goods_count">发货量</string>
    <string name="get_goods_count">接货量</string>
    <string name="top_up_money">充值总额</string>
    <string name="with_time_query">按时间查询</string>
    <string name="driver_in">司机入口</string>
    <string name="driver_location">司机位置</string>
    <string name="goods_master_in">货主入口</string>
    <string name="id_card_number">身份证号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">13米 不限车型 / 100吨  重货 \n装车时间12月7日全天  一装一卸</string>
    <string name="forget_password">忘记密码?</string>
    <string name="update_password">修改密码</string>
    <string name="random_see_see">随便看看</string>
    <string name="upload_photo_remark">若有注册公司，可提供三证照片（营业执照、公司实体照等...），若没有实体公司，可提供店面实体照片，若填写了机构代码，请务必上传营业执照照片。</string>
    <string name="send_code">发送验证码</string>
    <string name="look_goods_location">查看货源位置</string>
    <string name="if_ling_dan">是否零担</string>
    <string name="goods_content">货物信息</string>
    <string name="car_content">车辆信息</string>
    <string name="car_length_demand">车长需求</string>
    <string name="car_type_demand">车型需求</string>
    <string name="goods_master">货主</string>
    <string name="relation_goods_master">联系货主</string>
    <string name="start_navigation">开始导航</string>
    <string name="commit_update">提交修改</string>
    <string name="car_code">车牌号</string>
    <string name="please_input_ok_phone">请输入正确手机号</string>
    <string name="please_input_account">请输入帐号(手机号)</string>
    <string name="please_input_password">请输入密码</string>
    <string name="next_step">下一步</string>
    <string name="goods_name">货物名称</string>
    <string name="please_goods_name">请输入货物名称</string>
    <string name="delete">删除</string>
    <string name="user_feedback">用户反馈</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="please_input_feedback">请填写反馈意见（至少20个字）</string>
    <string name="goods_status">货物类别</string>
    <string name="helper">使用帮助</string>
    <string name="my_run_order">我的运单</string>
    <string name="info_money">信息费用</string>
    <string name="top_up">充值</string>
    <string name="ali_account">支付宝账号</string>
    <string name="add_path">添加订阅路线</string>
    <string name="insurance">保险</string>

    <string-array name="load_unload_mode_list">
        <item>一装一卸</item>
        <item>一装两卸</item>
        <item>一装多卸</item>
        <item>两装一卸</item>
        <item>两装两卸</item>
        <item>两装多卸</item>
    </string-array>

    <string-array name="pay_mode_list">
        <item>全现金</item>
        <item>需回单</item>
        <item>三段付</item>
    </string-array>

    <string name="agreement">

本《货物运输协议》（“本协议”）由托运人“托运人”，与承运人（“承运人”）就承运人为托运人提供货物运输服务所订立的有效合约。\n
\n
本协议项下托运人和承运人合称为“双方”，单独称“一方”。\n
\n
为便于双方就服务达成一致，河北振超货物运输有限公司运营的货车多平台仅按双方确认的信息与条件，免费生成本协议的电子版共双方审阅。河北振超货物运输有限公司及货车多平台不签署本协议，与本协议及本协议项下的任何权利义务均无关。\n
\n
双方通过点击货车多平台相关页面上的“确认”“同意”或“接受”键或以其他方式确认接受本协议或已实际享有本协议项下的权益或已实际执行本协议项下的约定，即表示双方已达成并同意接受本协议全部约定内容的约束。\n
\n
在确认本协议之前，请双方仔细阅读本协议全部内容。如一方不同本协议的任意内容，或无法理解本协议的条款，请不要进行确认和后续操作。\n
\n
1 货车多平台：指货车多运营的提供物流信息服务及相关增值服务的APP与网站。\n
\n
2 货物运输交易\n
        \n
2.1双方同意并确认，任一方均已对其提供并经由货车多平台相关页面显示的信息进行了复核，对该信息的真实性、准任性与完整性负责，且任意一方已审阅并同意由另一方提供并经由货车多平台相关页面显示的信息，对该信息不存在任何异议。成交之前应进一步检查对方的身份及有关运输证件，必要时去政府安全管理机构确认另一方的真实性，对此货车多不但任何责任，若发现一方有欺诈嫌疑，请不要进一步合作。\n
        \n
2.2双方同意，托运人委托承运人将货物从装货地点运到卸货地点。托运人应将有效、准确的货物数量、卸货时间及地点告知承运人；承运人在运输过程中要时时向托运人报告自己的位置，直到双方协商的卸货地点。\n
        \n
2.3托运人应指定收货人对货物进行验收，并负责安排卸货事宜。除非存在因承运人运输不当造成的数量少或损坏，否则应视为验收合格。\n
\n
3 托运人的其他权利义务\n
3.1托运人确认，托运人有签订和履行本协议的资格和能力，并确保托运人提供的货物数量、装卸地点和收货人的联系方式的真实、准确及完整。\n
        \n
3.2托运人确认其托运的货物不属于相关法律法规规定的易燃、易爆、有毒、有害物品及违禁物品，货物运输需要办理审批、检验手续的托运人应当将办理完有关手续文件提交承运人。\n
        \n
3.3托运人应对货物进行对货物的完善包装检查，以防止货物出现破损、散落和变质。\n
        \n
3.4托运人应当协调并确保收货人按照双方约定进行验收。违约一方要承担已损失的责任（已约定的责任）。\n
        \n
3.5托运人确保承运人所应得的运费等相关费用。\n
        \n
3.6托运人应告知承运人自发货地点至卸货地点的过程中每隔一小时向托运方提供一次有效位置发送。\n
        \n
3.7托运人要确保对承运人证件信息的保密，不得透露给第三方。\n
        \n
3.8托运方要主动和承运人谈妥运费付款方式。以避免不必要的运费纠纷。\n
\n
4 承运人的其他权利义务\n
        \n
4.1承运人确认向托运人提供：a从事货物运输的相关资质、司机和车辆的有效证件，b并取得得签订和履行本协议的相关合法授权、资格和能力。\n
        \n
4.2承运人认真清点货物数量及包装情况，承运人对货物运输过程中的损失等承担赔偿责任，但承运人证明损失是因不可抗力、货物本身的自然性质导致的损失或因收货人的过错造成的，不承担损失赔偿责任。\n
        \n
4.3承运人应当确保货物安全及时到达卸货地点，并要求收货人进行验收和出具验收证明。\n
        \n
4.4承运人将货物送达卸货地点，若无人及时验收货物，应及时通知托运人履行验收事宜。\n
        \n
4.5承运人有权自主决定通过货车多平台相关页面操作授权货车多向托运人提供承运人证件信息。若该信息错误、不实、不准确过时的，货车多对此不承担任何责任，承运人应赔偿托运人及货车多等其他第三方由此遭受的全部损失。\n
\n
5 违约责任\n
        \n
双方要仔细谈好，违约的一方要承担相应赔偿。\n
\n
6 货车多不签署本协议，不参与本协议项下的货物运输交易。双方自行确保其通过货车多平台填写、确认、提供及/或生成的信息的真实性、准确性与完整性，货车多就该等信息不承担任何责任。因本协议及/或本协议项下的货物运输交易或相关事宜产生的纠纷、义务或责任以及托运人与承运人及/任何第三方之间发生的任何其他纠纷、义务或责任（包括但不限于托运人与承运人就另一方所提供信息的真实性、准确性与完整性、运费的金额、支付等事宜产生的任何争议及托运人与承运人就货物装卸和运输过程中发生的货物毁损、缺失、灭失等情况产生的任何争议），由托运人和承运人自行解决并承担全部义务、责任。任何一方不得因上述的纠纷、义务或责任向货车多提出或提起任何主张、要求、诉讼、仲裁或其他法律程序，且不得因此导致货车多承担任何责任、义务或受到任何损失。\n
\n
7 如果托运人或承运人违反本协议第6条的约定或向货车多提出任何与货物交易相关的主张、要求或针对货车多提起任何诉讼、仲裁或其他法律程序，本协议双方知晓并确认该情形将给货车多造成严重不合理的损害，该托运人或承运人应当立即纠正该情形、消除不良影响并向货车多支付1万元的违约金而且该等托运人或承运人还应赔偿货车多因此遭受的全部损失（包括但不限于直接与间接的经济损失、商誉损失及对外支付俄赔偿金、和解款、调查费、律师费、诉讼费以及其他因索赔而发生的费用等）。\n
\n
8 本协议未尽事宜，由双方协商解决。如因本协议的签署、履行或与本协议相关任何事宜发生纠纷，双方应友好解决，协商不成，任一方拟通过诉讼的方式解决争议的，该方应向河北振超货物运输有限公司住所地法院提起诉讼。\n
\n
本协议以电子版订立，自双方确认之日起生效，具有法律约束力。
    </string>

</resources>
