<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/top_line"-->
        <!--android:icon="@drawable/ic_top"-->
        <!--android:title="@string/top_line" /> -->
    <item
        android:id="@+id/bao_xian"
        android:icon="@drawable/ic_bao_xian"
        android:title="@string/insurance" />
    <item
        android:id="@+id/find_goods"
        android:icon="@drawable/ic_find_goods"
        android:title="@string/find_goods" />
    <item
        android:id="@+id/send_goods"
        android:icon="@drawable/ic_send_goods"
        android:title="@string/send_goods" />
    <item
        android:id="@+id/che_yuan"
        android:icon="@drawable/ic_che_yuan"
        android:title="@string/che_yuan" />
    <item
        android:id="@+id/person"
        android:icon="@drawable/ic_user"
        android:title="@string/person" />

</menu>