<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/clt_title"
        layout="@layout/car_length_type_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <TextView
                android:id="@+id/tv_use_car_type"
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/use_car_type" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_carload"
                    android:layout_width="160px"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginRight="@dimen/dp_8"
                    android:background="@drawable/text_bg_check_selector"
                    android:gravity="center"
                    android:text="@string/carload"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_14" />

                <TextView
                    android:id="@+id/tv_breakbulk"
                    android:layout_width="160px"
                    android:layout_height="@dimen/dp_40"
                    android:background="@drawable/text_bg_check_selector"
                    android:gravity="center"
                    android:text="@string/breakbulk"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp_14" />

            </com.zhy.autolayout.AutoLinearLayout>

            <TextView
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/car_length" />

            <com.zl.zlibrary.view.MyGridView
                android:id="@+id/grid_card_length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4"></com.zl.zlibrary.view.MyGridView>

            <TextView
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/car_type" />

            <com.zl.zlibrary.view.MyGridView
                android:id="@+id/grid_card_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4"></com.zl.zlibrary.view.MyGridView>

            <TextView
                android:id="@+id/tv_goods_type"
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/goods_type" />

            <com.zl.zlibrary.view.MyGridView
                android:id="@+id/grid_goods_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4"></com.zl.zlibrary.view.MyGridView>

            <TextView
                android:id="@+id/tv_ok"
                style="@style/TextButtonStyle"
                android:text="确定" />

        </com.zhy.autolayout.AutoLinearLayout>

    </ScrollView>
</com.zhy.autolayout.AutoLinearLayout>
