<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/cd_title"
        layout="@layout/car_length_type_title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10">

            <TextView
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/load_unload_mode" />

            <com.zl.zlibrary.view.MyGridView
                android:id="@+id/grid_card_length"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4"></com.zl.zlibrary.view.MyGridView>

            <TextView
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/pay_mode" />

            <com.zl.zlibrary.view.MyGridView
                android:id="@+id/grid_card_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="4"></com.zl.zlibrary.view.MyGridView>

            <TextView
                style="@style/TextCarTypeDialogStyle"
                android:text="@string/remark" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:background="@drawable/grey_line_shape"
                android:hint="@string/limit_50size"
                android:paddingLeft="@dimen/dp_8"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/dp_14" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/blue"
                android:gravity="center"
                android:text="确定"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_16" />

        </com.zhy.autolayout.AutoLinearLayout>

    </ScrollView>

</com.zhy.autolayout.AutoLinearLayout>
