<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_16">

    <include
        android:id="@+id/gt_title"
        layout="@layout/car_length_type_title_layout" />

    <GridView
        android:id="@+id/gt_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/light_grey" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            style="@style/TextCarTypeDialogStyle"
            android:layout_marginLeft="@dimen/dp_8"
            android:text="@string/goods_name" />

        <EditText
            android:id="@+id/et_input_type"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@drawable/grey_line_shape"
            android:hint="@string/please_goods_name"
            android:paddingLeft="@dimen/dp_6"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/tv_input_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="0.4"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
